--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                                                 <h5><b-badge variant="secondary"> Total MAG </b-badge> {{ builder_target.showTotalMagPure() }} ~ {{ builder_target.showTotalMag() }} </h5>
                                             </div>
                                             <div class="col-12 col-md-auto">
-                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(4,0)">Best ★4 Rarity Fusion</b-button>
-                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(3,0)">Best ★3 Rarity Fusion</b-button>
-                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(2,0)">Best ★2 Rarity Fusion</b-button>
-                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(1,0)">Best ★1 Rarity Fusion</b-button>
+                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(4,0)">Cheapest ★4 Rarity Fusion</b-button>
+                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(3,0)">Cheapest ★3 Rarity Fusion</b-button>
+                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(2,0)">Cheapest ★2 Rarity Fusion</b-button>
+                                                <b-button class="m-1" size="sm" variant="success" @click="builder_auto_costdown(1,0)">Cheapest ★1 Rarity Fusion</b-button>
                                                 <!--
                                                 <b-button class="m-1" size="sm" variant="warning" @click="builder_auto_costdown(4,1)">雜★4</b-button>
                                                 <b-button class="m-1" size="sm" variant="warning" @click="builder_auto_costdown(3,1)">雜★3</b-button>
@@ -241,7 +241,7 @@
 
             <b-tab no-body class="p-2">
 
-                <div class="row no-gutters" style="background:url('images/theme/steven.png') no-repeat right center; background-size:auto 300px">
+                <div class="row no-gutters" style="background:url('images/theme/Einherjar.png') no-repeat right center; background-size:auto 300px">
 
                     <!-- Language Option
                     <div class="col-12 py-2">
@@ -287,12 +287,6 @@
                     <div class="col-12 py-2">
                         <div class="p-1 border rounded text-center" style="background-color:rgba(200, 200, 200, 0.5);">
                             <div class="small">
-                            君は私が作った悪魔召喚プログラムを使ってるね<br>
-                            もし君が秩序にも混沌にも偏らず<br>
-                            中庸の道を往くのなら<br>
-                            私が僅かばかりだが協力してあげよう<br><br>
-                            人間が持つ価値を　可能性を　私に証明してくれ<br><br>
-                            スティーヴン・ホーキング (1942-2018)
                             </div>
                         </div>
                     </div>
@@ -310,15 +304,19 @@
 
         <div class="row no-gutters justify-content-start align-items-center">
             <div class="col-auto p-2">
+                <img v-if="orb.state" v-for="orb in orbs" :src="orb.icon" style="width:30px">
+            </div>
+            <div class="col-auto p-2">
                 <div class="font-weight-bold">
                     <b-badge :variant="gate_status_jp?'success':'secondary'">EN {{ gate_timer_jp }}</b-badge>
                     <!--<b-badge :variant="gate_status_ch?'success':'secondary'">CH {{ gate_timer_ch }}</b-badge>-->
                 </div>
             </div>
-            <div class="col-auto p-2">
-                <img v-if="orb.state" v-for="orb in orbs" :src="orb.icon" style="width:30px">
-            </div>
 
+            <div class="col-auto p-2">
+              <div class="small">Localized in English by Dissi - original found @ <a href="https://oceanxdds.github.io/dx2_fusion/">https://oceanxdds.github.io/dx2_fusion/</a><br>
+              <a href="https://www.buymeacoffee.com/d574xrsQC">Buy me a coffee!</a></div>
+            </div>
             <div class="col-auto p-2" v-if="resource_options.length>1">
                 <b-form-radio-group id="lang"
                     buttons
@@ -478,8 +476,8 @@
                     <span class="ml-2" v-if="usage=='info'">AI: {{ devil.type }}</span>
                     <b-button v-if="usage=='fusion'||usage=='skill'" variant="info" size="sm" @click.stop="info()" class="font-weight-bold small py-0">Info</b-button>
                     <span v-if="usage=='skill'">
-                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(0)">持有</b-badge>
-                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(1)">繼承</b-badge>
+                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(0)">Awaken</b-badge>
+                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(1)">Gacha</b-badge>
                     </span>
                 </div>
             </b-card-body>
