fix image not showing up

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
             <b-tab no-body class="p-2">
 
-                <div class="row no-gutters" style="background:url('images/theme/Einherjar.png') no-repeat right center; background-size:auto 300px">
+                <div class="row no-gutters" style="background:url('images/theme/einherjar.png') no-repeat right center; background-size:auto 300px">
 
                     <!-- Language Option
                     <div class="col-12 py-2">
