--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dx2 Shin Megami Tensei Liberation Fusion Calculator & Database">
+    <meta name="description" content="Dx2 Shin Megami Tensei Liberation: Fusion Calculator + Database">
     <meta name="keywords" content="Shin Megami Tensei, Megaten, Dx2, Liberation, Fusion, Calculator">
     <link rel="icon" href="images/theme/favicon.ico">
     <title>Dx2 Database</title>
@@ -319,7 +319,7 @@
             </div>
 
             <div class="col-auto p-2">
-              <div class="small">Forked by Dissi - original found @ <a href="https://oceanxdds.github.io/dx2_fusion/">https://oceanxdds.github.io/dx2_fusion/</a><br>
+              <div class="small">Forked by Dissi - original @ <a href="https://oceanxdds.github.io/dx2_fusion/">https://oceanxdds.github.io/dx2_fusion/</a><br>
               <a href="https://www.buymeacoffee.com/d574xrsQC">Buy me a coffee!</a></div>
             </div>
             <div class="col-auto p-2" v-if="resource_options.length>1">
