--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <b-nav-item href="#" @click="route('fusion.fission')" :active="isRoute('fusion.fission')">{{ $t('message.reverse_fusion') }}</b-nav-item>
                     <b-nav-item href="#" @click="route('fusion.fusion')" :active="isRoute('fusion.fusion')">{{ $t('message.normal_fusion') }}</b-nav-item>
                     <b-nav-item href="#" @click="route('skill')" :active="isRoute('skill')">{{ $t('message.skill') }}</b-nav-item>
-                    <b-nav-item href="#" @click="route('notes')" :active="isRoute('notes')">Notes</b-nav-item>
+                    <b-nav-item href="#" @click="route('notes')" :active="isRoute('notes')">{{ $t('message.notes') }}</b-nav-item>
                 </b-navbar-nav>
                 <b-navbar-nav class="ml-auto">
                     <b-nav-form action="#" class="d-none d-md-block">
