--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <b-collapse is-nav id="nav_collapse">
                 <b-navbar-nav>
-                    <b-nav-item href="#" @click="route('notes')" :active="isRoute('notes')">{{ $t('message.notes') }}</b-nav-item>
+                    <b-nav-item href="#" @click="route('notes')" :active="isRoute('notes')">Demon Notes</b-nav-item>
                     <b-nav-item href="#" @click="route('fusion.devil')" :active="isRoute('fusion.devil')">{{ $t('message.devil') }}</b-nav-item>
                     <b-nav-item href="#" @click="route('fusion.fission')" :active="isRoute('fusion.fission')">{{ $t('message.reverse_fusion') }}</b-nav-item>
                     <b-nav-item href="#" @click="route('fusion.fusion')" :active="isRoute('fusion.fusion')">{{ $t('message.normal_fusion') }}</b-nav-item>
