--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
             <div class="col-auto p-2">
               <div class="small">Forked by Devs & Dissi - original @ <a href="https://oceanxdds.github.io/dx2_fusion/">https://oceanxdds.github.io/dx2_fusion/</a><br>
-              <a href="https://www.buymeacoffee.com/d574xrsQC">Buy me a coffee!</a></div>
+              <a href="https://dx2wiki.com/index.php/Main_Page">Check out the Wiki!</a></div>
             </div>
             <div class="col-auto p-2" v-if="resource_options.length>1">
                 <b-form-radio-group id="lang"
