--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     <span class="ml-2" v-if="usage=='info'">AI: {{ devil.type }}</span>
                     <b-button v-if="usage=='fusion'||usage=='skill'" variant="info" size="sm" @click.stop="info()" class="font-weight-bold small py-0">Info</b-button>
                     <span v-if="usage=='skill'">
-                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(0)">Transferrable</b-badge>
+                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(0)">Transfer</b-badge>
                         <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(1)">Innate</b-badge>
                         <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(2)">Awaken</b-badge>
                         <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(3)">Gacha</b-badge>
