--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@
                     <b-button v-if="usage=='fusion'||usage=='skill'" variant="info" size="sm" @click.stop="info()" class="font-weight-bold small py-0">Info</b-button>
                     <span v-if="usage=='skill'">
                         <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(0)">Transfer</b-badge>
-                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(1)">Innate</b-badge>
-                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(2)">Awaken</b-badge>
-                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(3)">Gacha</b-badge>
+                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(1)">TEST</b-badge>
+                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(2)">TEST</b-badge>
+                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(3)">TEST</b-badge>
                     </span>
                 </div>
             </b-card-body>
