--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
                     <span class="ml-2" v-if="usage=='info'">AI: {{ devil.type }}</span>
                     <b-button v-if="usage=='fusion'||usage=='skill'" variant="info" size="sm" @click.stop="info()" class="font-weight-bold small py-0">Info</b-button>
                     <span v-if="usage=='skill'">
-                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(1)">Transferrable</b-badge>
-                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(0)">Not Transferrable</b-badge>
+                        <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(1)">Transferable</b-badge>
+                        <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(0)">Non-Transferable</b-badge>
                     </span>
                 </div>
             </b-card-body>
