--- a/index.html
+++ b/index.html
@@ -483,7 +483,8 @@
                     <span v-if="usage=='skill'">
                         <b-badge class="ml-2" variant="success" v-if="isSkillAvailable(1)">Transferable</b-badge>
                         <b-badge class="ml-2" variant="warning" v-if="isSkillAvailable(0)">Non-Transferable</b-badge>
-                        <b-badge class="ml-2" variant="warning" v-if="isAwakened">Awakened</b-badge>
+                        <b-badge class="ml-2" variant="success" v-if="isGacha()">Gacha</b-badge>
+                        <b-badge class="ml-2" variant="warning" v-if="isAwakened()">Awaken</b-badge>
                     </span>
                 </div>
             </b-card-body>
