--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
             <b-tab no-body class="p-2">
                 <h4>Azuraki's Notes</h4>
                 <ul>
-                    <li>There may be people who have better opinions than mine as i don't have that many 5* demons. I'm
-                        just analyzing and discussing what i know based on looking at the demon and seeing people with
-                        them. I'll make edits to this post as people post their opinions and such.</li>
+                    <li>There may be people who have better opinions than mine as I don't have that many 5* demons. I'm
+                        just analyzing and discussing what I know based on looking at the demon and seeing people with
+                        them. I'll make edits to this as people post their opinions and such.</li>
                     <li>In regards to buffs made to demons not yet in our version, information was obtained from here
-                        so i'll be using the names given there.</li>
+                        so I'll be using the names given there.</li>
                     <li>Even if you have a demon with an unoptimal archetype, there will be the option to change
                         archetypes in the future so if there's nothing good to fuse them into i recommend just holding
                         onto them.</li>
@@ -418,7 +418,7 @@
                     <ul>
                         <li>Resist Fire.</li>
                         <li>Endure/Enduring Soul. You can even opt not to get Resist Fire and get these two, he'd
-                            essentially survive 3 extra hits. Though that means enemies would focus fire fire on
+                            essentially survive 3 extra hits. Though that means enemies would focus fire on
                             him.</li>
                     </ul>
                     <p><strong>Brands:</strong> Divine Type for spellcaster Support Type for well support.</p>
