--- a/index.html
+++ b/index.html
@@ -960,10 +960,21 @@
                         success rate. This bypasses Endure/Avatar/Enduring Soul, Tetraja and Seiran's Null Mortal, but
                         doesn't activate if her team is wiped out/she's the last one to die. On offense you can easily
                         exploit the game's AI to target her by intentionally leaving her at level 1, or having the
-                        least defense/hp/mdef so they're tempted to kill her straight away. There are counters to her
-                        ability if you ever see her on defense teams: Kill all other demons and leave her last Use
-                        Huang Long to repel almighty attacks, this blocks her ability. Use ailments on her/her team.
-                        Poison can kill her without worry of her passive, charm can force her allies to kill her.</p>
+                        least defense/hp/mdef so they're tempted to kill her straight away.</p>
+                    <ul>
+                        <li>There are counters to her ability if you ever see her on defense teams:
+                            <ul>
+                                <li>Kill all other demons and leave her last Use Huang Long to repel almighty attacks,
+                                    this blocks her ability.</li>
+                                <li>Use ailments on her/her team. Poison can kill her without worry of her passive,
+                                    charm can force her allies to kill her.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>Bring Reiko as you'd probably expect them to use Recarm a lot. This will ensure Ixtab's
+                            ability only activates once as she should be easily killable</li>
+                    </ul>
                     <p><strong>Best Archetype(s): </strong></p>
                     <ul>
                         <li>Yellow (Mahashibaboon + Insanity). Due to her really high luck stat, when she is alive she
@@ -1371,6 +1382,12 @@
                         reduction (by bringing demons such as Slime, Abraxas, Arahabaki, etc) you'd get a total of 45%
                         damage reduction, halving all damage done by the enemy. With this strat however, single target
                         skills will still do standard damage to you.</p>
+                    <p>There are counters to Orcus teams:</p>
+                    <ul>
+                        <li>Use Loki to be able to have a chance at skipping press turn usage</li>
+                        <li>Use Chalk Eater as your dx2, you'll still get buffs when you hit their weakness so you
+                            don't have to bring a buffer unit. There's also the chance of getting extra press turns</li>
+                    </ul>
                     <p><strong>Best Archetype(s): </strong></p>
                     <ul>
                         <li>Red is quite bad to switch/shift archetype into (Mamudoon) as Orcus isn't really meant to
