--- a/index.html
+++ b/index.html
@@ -425,18 +425,14 @@
                 </b-card>
                 <b-card>
                     <p><strong>[Yoshitsune] </strong></p>
-                    <p>Being immune to light and dark, resistant to phys attacks he has high strength, good agility
+                    <p>He is immune to light and dark, resistant to phys attacks, has high strength, good agility
                         and
                         decent (buffed recently) luck. He comes with the unique skill Hassou Tobi (8x random hits
                         (pierces as well)), which is very useful for bosses and brand farming. His other innate
                         skills
-                        include Vorpal Blade and Mana Aid, making him amazing in pve and pvp. Mana Aid allows him
+                        include Vorpal Blade and Mana Aid, making him amazing in PVE and PVP. Mana Aid allows him
                         to
-                        recover full MP each wave so he can sweep and repeat with Vorpal Blade or Hassou Tobi. You
-                        can
-                        do crazy stuff such as this and that's with the Red archetype (which isn't that good
-                        compared
-                        to the others).</p>
+                        recover full MP each wave so he can sweep and repeat with Vorpal Blade or Hassou Tobi.</p>
                     <p><strong>Best Archetype(s):</strong></p>
                     <ul>
                         <li>All archetypes are usable and good. Regardless of what you get there really shouldn't
@@ -444,7 +440,18 @@
                             any issues at all. Changing archetype for him is just changing preference depending on
                             how
                             you'd like to use him.</li>
-                        <li>Red can be recommended (Gigantomachia + God's Hand), but it has quite a niche use as
+                        <li>Purple (Phys Amp + Savage Glee). Makes him hit really hard, ripping the enemies to
+                            shreds.
+                            Savage Glee would add onto his crit rate meaning it'll be quite likely in you getting
+                            another turn.</li>
+                        <li>Teal (Drain Phys + Resist Ice). With drain phys you don't have to worry about repelled
+                            damage, greatly adding to his survivability. Resist Ice can be replaced as he doesn't
+                            have
+                            an ice weakness.</li>
+                        <li>Yellow (Charge + Auto-Sukuka). For the sole purpose of ramping up your damage even
+                            further,
+                            a 5mp charge coupled with Templar Dragon's passive would hit really hard.</li>
+                        <li>Red (Gigantomachia + God's Hand), has a niche use as
                             the
                             best outcome to use it is dependant on getting Phys Amp and whether you'd want your
                             Yoshi
@@ -457,23 +464,12 @@
                             skill gacha, he'd be able to do some heavy sweeping. This is pretty rare as you'd be
                             giving
                             up on Charge (and that coupled with Hassou Tobi can be really powerful).</li>
-                        <li>Purple (Phys Amp + Savage Glee). Makes him hit really hard, ripping the enemies to
-                            shreds.
-                            Savage Glee would add onto his crit rate meaning it'll be quite likely in you getting
-                            another turn.</li>
-                        <li>Teal (Drain Phys + Resist Ice). With drain phys you don't have to worry about repelled
-                            damage, greatly adding to his survivability. Resist Ice can be replaced as he doesn't
-                            have
-                            a ice weakness.</li>
-                        <li>Yellow (Charge + Auto-Sukuka). For the sole purpose of ramping up your damage even
-                            further,
-                            a 5mp charge coupled with Templar Dragon's passive would hit really hard.</li>
                     </ul>
                     <p><strong> Recommended skills: </strong></p>
                     <ul>
-                        <li>Phys Boost. Give him more power.</li>
-                        <li>Savage Glee. Give him more crit (if not purple)</li>
-                        <li>Good Aim. If you find he's missing a lot this can help with accuracy issues. Though you
+                        <li>Phys Boost/Amp. Give him more power.</li>
+                        <li>Bloody/Savage Glee. Give him more crit (if not purple)</li>
+                        <li>Good/Great Aim. If you find he's missing a lot this can help with accuracy issues. Though you
                             should aim for accuracy % tertiaries from brands.</li>
                         <li>Charge (Optional). To pull off stuff like the Templar Dragon strategy.</li>
                     </ul>
@@ -968,8 +964,9 @@
                                     this blocks her ability.</li>
                                 <li>Use ailments on her/her team. Poison can kill her without worry of her passive,
                                     charm can force her allies to kill her.</li>
-                                    <li>Bring Reiko as you'd probably expect them to use Recarm a lot. This will ensure Ixtab's
-                                        ability only activates once as she should be easily killable</li>
+                                <li>Bring Reiko as you'd probably expect them to use Recarm a lot. This will ensure
+                                    Ixtab's
+                                    ability only activates once as she should be easily killable</li>
                             </ul>
                         </li>
                     </ul>
