--- a/index.html
+++ b/index.html
@@ -829,7 +829,8 @@
                     </ul>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
-                        <li>Endure. For pvp and survival Samarecarm. Gives you more support utility</li>
+                        <li>Endure. For pvp and survival</li>
+                        <li>Samarecarm. Gives you more support utility</li>
                         <li>Barrier Break. Combine this with a Speedster HL for turn one ailment teams. On his
                             subsequent turns you can then spam 5E for survival.</li>
                         <li>Speedster. If not purple and you'd like the skill anyways its still a valid choice on
@@ -1157,7 +1158,7 @@
                         <li>Resist Force to cover his weakness.</li>
                         <li>Elec Boost to increase his mjolnir damage further</li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine type (focus on magic attack) so that he can spam lightning.</p>
+                    <p><strong>Brands:</strong> Divine type (focus on magic attack) so that he can spam Mjolnir.</p>
                 </b-card>
                 <b-card>
                     <p><strong>[Asherah] </strong></p>
@@ -1226,7 +1227,7 @@
                     <p><strong>[Ishtar] </strong></p>
                     <p>Second strongest caster in the game with a unique skill Mesopotamian Star, hitting all enemies
                         casting Tarukaja and Taruna. She's mainly used for a sweeping Jack Bros team with the Yellow
-                        Archetype but can also be used in Sloth 10 due to have Mahamaon. Concentrate, get the Jacks to
+                        Archetype but can also be used in Sloth 10 due to having Mahamaon. Concentrate, get the Jacks to
                         tag then Mesopotamian to hopefully one shot the enemy or weaken them enough to finish them off
                         the next turn/on the same turn. She comes with two weaknesses so there isn't that much
                         customization available.</p>
@@ -1248,7 +1249,7 @@
                 </b-card>
                 <b-card>
                     <p><strong>[Susano-o] </strong></p>
-                    <p>Single target sniper with really high strength and focus towards that role due to Assassin (+10%
+                    <p>Single target sniper with really high strength due to Assassin (+10%
                         bonus damage for single target skills), Mortal Jihad and Kusanagi. Kusanagi being his unique
                         skill fully boosted by Phys ATK and also casting Tarukaja when not hitting null/repel/drain
                         meaning you'd almost all of the time would have the damage buff active.</p>
