Guide: Updated Metatron
- Grammar fixes
- Added Red Archetype as recommendation
- Added Serial Killer/Butcher as skill recommendation.

--- a/index.html
+++ b/index.html
@@ -359,11 +359,14 @@
                     <ul>
                         <li>Common (Enduring Soul). Increases his survivability, ensuring he lives ensures he can
                             kill.
-                            Regardless of the archetype, I wouldn't fuse him due to how hard it is just to fuse him
+                            Regardless of the archetype i wouldn't fuse him away due to how hard it is just to obtain him
                             and
-                            that his base kit is really good regardless of the archetype skill added, you can
-                            always
-                            wait for archetype change regardless.</li>
+                            the fact that his base kit is really good regardless of the awakened skill, you can
+                            always archetype change if you prefer another color.</li>
+                        <li> Red (Mahamadyne). Gives him an aoe to use, though this is restricted to Light it is spammable (6 mp cost). 
+                             He can be very useful for Sloth 10 with this skill (you can also build him to specialize in light, i've seen
+                             someone transfer both Light Boost and Amp onto him).
+                        </li>
                     </ul>
                     <p><strong>Recommended skills:</strong></p>
                     <ul>
@@ -371,6 +374,9 @@
                         <li>Megido/la/laon. For multiple targets, you can then use Fire of Sinai to clean up/for
                             single
                             targets.</li>
+                        <li>Serial Killer/Butcher. Not only does it affect Aoe skills, it also affects Multi-Hit, 
+                            so you can power up Fire of Sinai's damage considerably
+                        </li>
                     </ul>
                     <p><strong>Brands:</strong> Magical or Divine setup, up to you.</p>
                 </b-card>
