--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <!-- index_main : 5 guide -->
 
             <b-tab no-body class="p-2">
-                <h4>Azuraki's Notes</h4>
+                <h4 style="text-align: center;">Azuraki's Notes</h4>
                 <ul>
                     <li>There may be people who have better opinions than mine as I don't have that many 5* demons. I'm
                         just analyzing and discussing what I know based on looking at the demon and seeing people with
@@ -347,7 +347,7 @@
                         and then pick whichever one you like.</li>
                 </ul>
                 <b-card>
-                    <p><strong>[Metatron] </strong></p>
+                    <p><strong><a @click="show_guide_devil('Metatron')">Metatron</a> </strong></p>
                     <p>Highest Grade demon with a unique skill Fire Of Sinai. Fire of Sinai hits really hard with
                         guaranteed 5 hits (+1 if you're using Eileen and you would be able to activate her skills),
                         quite amazing for boss killing. He comes naturally to boot with Infinite Chakra so you
