--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <p><strong>Brands:</strong> Magical or Divine setup, up to you.</p>
                 </b-card>
                 <b-card>
-                    <p><strong>[Lucifer] </strong></p>
+                    <p><strong><a @click="show_guide_devil('Lucifer')">Lucifer</a></strong></p>
                     <p>Strongest almighty sweeper, Ideally you'd want purple archetype (Butcher) to ensure he's as
                         powerful as he can get. The reason for this is that he comes with the unique skill "Morning
                         Star" (Almighty, 150 power, hit all enemies with 8 mp cost), plus the fact it can be
@@ -405,7 +405,7 @@
                     <p><strong>Brands:</strong> Use divine setup to ensure he can two turn Morning Star.</p>
                 </b-card>
                 <b-card>
-                    <p><strong>[Vishnu] </strong></p>
+                    <p><strong><a @click="show_guide_devil('Vishnu')">Vishnu</a></strong></p>
                     <p>Strong slow caster with the unique passive Avatar. This acts as Enduring Soul + Life Aid
                         combined into one (500 HP, 50% per wave. It's also levellable). You can choose to also
                         build
@@ -430,7 +430,7 @@
                     <p><strong>Brands:</strong> Divine Type for spellcaster Support Type for well support.</p>
                 </b-card>
                 <b-card>
-                    <p><strong>[Yoshitsune] </strong></p>
+                    <p><strong><a @click="show_guide_devil('Yoshitsune')">Yoshitsune</a></strong></p>
                     <p>He is immune to light and dark, resistant to phys attacks, has high strength, good agility
                         and
                         decent (buffed recently) luck. He comes with the unique skill Hassou Tobi (8x random hits
@@ -482,7 +482,7 @@
                     <p><strong>Brands: </strong>War/Ward or Divine/Ward. Divine would be better for charge setups.</p>
                 </b-card>
                 <b-card>
-                    <p><strong>[Mother Harlot]&nbsp;</strong></p>
+                    <p><strong><a @click="show_guide_devil('Mother Harlot')">Mother Harlot</a>&nbsp;</strong></p>
                     <p>The third gacha exclusive demon in the game with 2 unique skills. She has Mana Gain (meh),
                         Death
                         Lust (+25% dmg to charmed enemies, 30% chance to charm all at the start of your turn) and
@@ -535,7 +535,7 @@
                     </p>
                 </b-card>
                 <b-card>
-                    <p><strong>[Trumpeter] </strong></p>
+                    <p><strong><a @click="show_guide_devil('Trumpeter')">Trumpeter</a></strong></p>
                     <p>He used to be not that great, but now buffed to be quite powerful. Comes with Concentrate,
                         Soul
                         Drain and his unique skill Apocalypse (Almighty 120 power, hit all with 40% chance to
