--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                         really (Spell is okay but then you wouldn't be able to 2 turn skills).</p>
                 </b-card>
                 <b-card>
-                    <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Zaou Gongen')">Zaou Gongen</a></strong></p>
+                    <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Zaou-Gongen')">Zaou-Gongen</a></strong></p>
                     <p>One of the key pieces in the Rebellion + Pierce combo (Pair him with Hell Biker). This is
                         due to his unique skill Kongo Zaou which enables demons with Rebellion to also have pierce
                         attached to this phys skills.</p>
