--- a/index.html
+++ b/index.html
@@ -313,11 +313,9 @@
                     <li>There may be people who have better opinions than mine as I don't have that many 5* demons. I'm
                         just analyzing and discussing what I know based on looking at the demon and seeing people with
                         them. I'll make edits to this as people post their opinions and such.</li>
-                    <li>In regards to buffs made to demons not yet in our version, information was obtained from here
-                        so I'll be using the names given there.</li>
-                    <li>Even if you have a demon with an unoptimal archetype, there will be the option to change
-                        archetypes in the future so if there's nothing good to fuse them into i recommend just holding
-                        onto them.</li>
+                    <li>Even if you have a demon with an unoptimal archetype, you can always shift their archetype by purchasing
+                        either the Archetype Selector or Shifter in the Karma shop
+                    </li>
                     <li><strong>General Brand setups: </strong>
                         <ul>
                             <li>Physical: Aim for Phys % as a primary. Tertiaries would include: Phys %, Crit %,
@@ -343,8 +341,8 @@
                     </li>
                     <li>Ctrl + F + [demon name] to find the demon you want, it's ordered by grade.</li>
                     <li>The order which I listed the archetypes is not indicative that x archetype is better than y
-                        archetype. Its just that its the best ones to go with. People would have their preferences
-                        anyways so take this as a guide, rather than a "You have to go with this one!!! kind of thing"
+                        archetype. People would have their preferences anyways so take this as a guide, 
+                        rather than a "You have to go with this one!!! kind of thing"
                         and then pick whichever one you like.</li>
                 </ul>
                 <b-card>
