--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@
                           <li><b>Physical</b>
                                 <ul>
                                     <li> Primary = PATK %</li>
-                                    <li> Teriaries = PATK %, Critical %, Accuracy % </li>
+                                    <li> Tertiaries = PATK %, Critical %, Accuracy % </li>
                                     <li>War / Ward OR Divine / Ward</li>
                                 </ul>
                             </li>
                             <li><b>Magical </b>
                                 <ul>
                                     <li> Primary = MATK % </li>
-                                    <li> Teriaries = MATK %, HP%, Evasion %
+                                    <li> Tertiaries = MATK %, HP%, Evasion %
                                     <li>Spell / Ward OR Divine / Ward</li>
                                 </ul>
                             </li>
@@ -360,7 +360,7 @@
                                   <li> Primary = HP%, Evasion % (If Demon has good agility), 
                                          Ailment Infliction % (If you're using an ailment demon)
                                   </li>
-                                  <li> Tertiary = HP%, Evade%, MDEF%, PDEF% </li>
+                                  <li> Tertiaries = HP%, Evade%, MDEF%, PDEF% </li>
                                   <li>Life / Ward OR Divine / Ward</li>
                                 </ul>
                             </li>
